assistant: fix wrong background color for highlighted heading

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2593,6 +2593,7 @@ GtkOverlay.osd {
  * GtkAssistant *
  ****************/
 GtkAssistant .sidebar .highlight {
+    background-color: transparent;
     color: @theme_fg_color;
     font: bold;
 }
